# mclauncherust

./: Cargo.toml  README.md
src/: launcher.rs  main.rs
src/args_generator/: mod.rs
src/download/: assets.rs  mod.rs  version.rs  version_list.rs
src/download/version/tests/: test_version_constant.rs
src/gui/: main_window.rs  mod.rs
src/launcher_config/: mod.rs
src/loader/: manifest_loader.rs  mod.rs  version_loader.rs
src/tuiapp/: app.rs  mod.rs  ui.rs
src/validator/: asset_validator.rs  mod.rs
