[package]
name = "mclauncherust"
version = "0.1.0"
authors = ["Inoki <veyx.shaw@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

reqwest = { version = "0.10", features = ["blocking", "json"] }
tokio = { version = "0.2", features = ["full"] }

crossterm = "0.18"
tui = { version = "0.14", default-features = false, features = ['crossterm'] }

# for arg parsing
argh = "0.1.4"

uuid = { version = "0.8", features = ["v4"] }
